# fileshelter

./: .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-build  Dockerfile-build-alpine  Dockerfile-build-arch  Dockerfile-release  INSTALL.md  Makefile.am  README.md  configure.ac
.github/workflows/: build-alpine.yml  build-arch.yml  build.yml  codeql.yml  release.yml
approot/: messages.xml  messages_de.xml  messages_en.xml  messages_es.xml  messages_fr.xml  messages_it.xml  messages_ru.xml  templates.xml  tos.xml
conf/: fileshelter.conf
docker/: Dockerfile
docroot/css/: fileshelter.css
libs/share/: CMakeLists.txt
libs/share/impl/: Db.cpp  Db.hpp  File.cpp  Share.cpp  Share.hpp  ShareCleaner.cpp  ShareCleaner.hpp  ShareManager.cpp  ShareManager.hpp  Traits.cpp  Traits.hpp
libs/share/include/share/: CreateParameters.hpp  Exception.hpp  IShareManager.hpp  Types.hpp
libs/utils/: CMakeLists.txt
libs/utils/impl/: Config.cpp  Config.hpp  FileResourceHandler.cpp  Logger.cpp  UUID.cpp
libs/utils/include/utils/: Exception.hpp  IConfig.hpp  Logger.hpp  Service.hpp  String.hpp  UUID.hpp  Zipper.hpp  ZipperResourceHandlerCreator.hpp
src/: CMakeLists.txt  Makefile.am  Makefile.in
src/config/: config.h.in  config.h.in~
src/database/: Db.cpp  Db.hpp  DbCleaner.cpp  DbCleaner.hpp  DbHandler.cpp  DbHandler.hpp  DbUpdater.hpp  File.cpp  File.hpp  Share.cpp  Share.hpp  Types.hpp
src/fileshelter/: CMakeLists.txt
src/fileshelter/main/: main.cpp
src/fileshelter/resources/: ShareResource.cpp  ShareResource.hpp
src/fileshelter/ui/: Exception.hpp  FileShelterApplication.cpp  FileShelterApplication.hpp  FileShelterApplicationCreator.hpp  PasswordUtils.cpp  PasswordUtils.hpp  ProgressBar.cpp  ProgressBar.hpp  ShareCreate.cpp  ShareCreate.hpp  ShareCreateFormModel.cpp  ShareCreateFormModel.hpp  ShareCreateFormView.cpp  ShareCreateFormView.hpp  ShareCreatePassword.cpp  ShareCreatePassword.hpp  ShareCreated.cpp  ShareCreated.hpp  ShareDownload.cpp  ShareDownload.hpp  ShareDownloadPassword.cpp  ShareDownloadPassword.hpp  ShareEdit.cpp  ShareEdit.hpp  ShareList.cpp  ShareList.hpp  ShareListPassword.cpp  ShareListPassword.hpp  ShareUtils.cpp  ShareUtils.hpp  TermsOfService.cpp  TermsOfService.hpp
src/libs/: CMakeLists.txt
src/libs/share/: CMakeLists.txt
src/libs/share/impl/: Db.cpp  Db.hpp  File.cpp  File.hpp  Share.cpp  Share.hpp  ShareCleaner.cpp  ShareCleaner.hpp  ShareManager.cpp  ShareManager.hpp  Traits.cpp  Traits.hpp  Types.hpp
src/libs/share/include/share/: CreateParameters.hpp  Exception.hpp  IShareManager.hpp  Types.hpp
src/libs/utils/: CMakeLists.txt
src/libs/utils/impl/: ArchiveZipper.cpp  ArchiveZipper.hpp  Config.cpp  Config.hpp  FileResourceHandler.cpp  FileResourceHandler.hpp  Logger.cpp  String.cpp  UUID.cpp  Zipper.cpp  ZipperResourceHandler.cpp  ZipperResourceHandler.hpp
src/libs/utils/include/utils/: Exception.hpp  FileResourceHandlerCreator.hpp  IConfig.hpp  IResourceHandler.hpp  IZipper.hpp  Logger.hpp  Service.hpp  String.hpp  UUID.hpp  ZipperResourceHandlerCreator.hpp
src/main/: .main.cpp.swp  main.cpp
src/resources/: FileResource.cpp  FileResource.hpp  ShareResource.cpp  ShareResource.hpp
src/share/: ShareCleaner.hpp  ShareUtils.cpp  ShareUtils.hpp
src/sharemanager/: ShareCleaner.cpp  ShareCleaner.hpp  ShareManager.cpp  ShareManager.hpp
src/tools/: CMakeLists.txt
src/tools/fileshelter-cmd/: CMakeLists.txt  Common.cpp  Common.hpp  CreateCommand.cpp  CreateCommand.hpp  DestroyCommand.cpp  DestroyCommand.hpp  FileShelterCmd.cpp  HelpCommand.cpp  HelpCommand.hpp  ICommand.hpp  ListCommand.cpp  ListCommand.hpp
src/tools/fileshelter-create/: CMakeLists.txt  FileShelterCreate.cpp
src/tools/fileshelter-list/: CMakeLists.txt  FileShelterList.cpp
src/tools/filesheltercmd/: CMakeLists.txt  FileShelterCmd.cpp
src/ui/: FileShelterApplication.cpp  FileShelterApplication.hpp  Home.cpp  Home.hpp  PasswordUtils.cpp  PasswordUtils.hpp  ProgressBar.hpp  ShareCommon.cpp  ShareCommon.hpp  ShareCreate.cpp  ShareCreate.hpp  ShareCreateFormModel.cpp  ShareCreateFormModel.hpp  ShareCreateFormView.cpp  ShareCreateFormView.hpp  ShareCreateParameters.cpp  ShareCreateParameters.hpp  ShareCreatePassword.cpp  ShareCreatePassword.hpp  ShareCreated.cpp  ShareCreated.hpp  ShareDownload.cpp  ShareDownload.hpp  ShareDownloadPassword.cpp  ShareDownloadPassword.hpp  ShareEdit.cpp  ShareEdit.hpp  SharePasswordFormView.cpp  SharePasswordFormView.hpp  ShareResource.cpp  ShareResource.hpp  ShareUtils.cpp  TermsOfService.cpp  TermsOfService.hpp
src/utils/: .UUID.cpp.swp  Config.cpp  Config.hpp  Crc32Calculator.hpp  Exception.hpp  Logger.cpp  Logger.hpp  UUID.cpp  UUID.hpp  Zip.cpp  Zip.hpp  Zipper.cpp
systemd/: default.service
