bin_PROGRAMS = fileshelter

fileshelter_SOURCES = \
	$(srcdir)/main/main.cpp			\
	$(srcdir)/database/Db.cpp		\
	$(srcdir)/database/Db.hpp		\
	$(srcdir)/database/File.cpp		\
	$(srcdir)/database/File.hpp		\
	$(srcdir)/database/Share.cpp		\
	$(srcdir)/database/Share.hpp		\
	$(srcdir)/resources/FileResource.cpp		\
	$(srcdir)/resources/FileResource.hpp		\
	$(srcdir)/resources/ShareResource.cpp		\
	$(srcdir)/resources/ShareResource.hpp		\
	$(srcdir)/share/ShareCleaner.cpp	\
	$(srcdir)/share/ShareCleaner.hpp	\
	$(srcdir)/share/ShareUtils.cpp		\
	$(srcdir)/share/ShareUtils.hpp		\
	$(srcdir)/ui/FileShelterApplication.cpp	\
	$(srcdir)/ui/FileShelterApplication.hpp	\
	$(srcdir)/ui/PasswordUtils.cpp		\
	$(srcdir)/ui/PasswordUtils.hpp		\
	$(srcdir)/ui/ProgressBar.cpp		\
	$(srcdir)/ui/ProgressBar.hpp		\
	$(srcdir)/ui/ShareCommon.cpp		\
	$(srcdir)/ui/ShareCommon.hpp		\
	$(srcdir)/ui/ShareCreate.cpp		\
	$(srcdir)/ui/ShareCreate.hpp		\
	$(srcdir)/ui/ShareCreateFormModel.cpp	\
	$(srcdir)/ui/ShareCreateFormModel.hpp	\
	$(srcdir)/ui/ShareCreateFormView.cpp	\
	$(srcdir)/ui/ShareCreateFormView.hpp	\
	$(srcdir)/ui/ShareCreateParameters.cpp	\
	$(srcdir)/ui/ShareCreateParameters.hpp	\
	$(srcdir)/ui/ShareCreatePassword.cpp	\
	$(srcdir)/ui/ShareCreatePassword.hpp	\
	$(srcdir)/ui/ShareCreated.cpp		\
	$(srcdir)/ui/ShareCreated.hpp		\
	$(srcdir)/ui/ShareDownload.cpp		\
	$(srcdir)/ui/ShareDownload.hpp		\
	$(srcdir)/ui/ShareEdit.cpp		\
	$(srcdir)/ui/ShareEdit.hpp		\
	$(srcdir)/ui/ShareDownloadPassword.cpp	\
	$(srcdir)/ui/ShareDownloadPassword.hpp	\
	$(srcdir)/utils/Config.cpp		\
	$(srcdir)/utils/Config.hpp		\
	$(srcdir)/utils/Logger.cpp		\
	$(srcdir)/utils/Logger.hpp		\
	$(srcdir)/utils/String.cpp		\
	$(srcdir)/utils/String.hpp		\
	$(srcdir)/utils/UUID.cpp		\
	$(srcdir)/utils/UUID.hpp		\
	$(srcdir)/utils/Zipper.cpp		\
	$(srcdir)/utils/Zipper.hpp


fileshelter_CXXFLAGS=-std=c++17 -I$(srcdir)/ui -Wpedantic

